# airplane_war

./: .gitignore  CMakeLists.txt  Code Horizon-飞机大战-可行性分析.txt  README.en.md  README.md  airplane-war.sln  airplane-war.vcxproj  airplane-war.vcxproj.filters  需求文档.xlsx
airplane/: Behavior-BulletBehavior.cpp  Behavior-BulletBehavior.h  Behavior-EnemyBehavior.cpp  Behavior-EnemyBehavior.h  Behavior-PlaneBehavior.cpp  Behavior-PlaneBehavior.h  Behavior-PlayerBehavior.cpp  Behavior-PlayerBehavior.h  Behavior-PropBehavior.cpp  Behavior-PropBehavior.h  Mgr-BulletMgr.cpp  Mgr-BulletMgr.h  Mgr-EnemyMgr.cpp  Mgr-EnemyMgr.h  Mgr-GameMgr.cpp  Mgr-GameMgr.h  Mgr-PlayerMgr.cpp  Mgr-PlayerMgr.h  Mgr-PropMgr.cpp  Mgr-PropMgr.h  Res-GameRes.cpp  Res-GameRes.h  core-Enemy.h  core-Player.h  core-bullet.h  core-plane.h  core-prop.h  main.cpp  system-engine.cpp  system-engine.h  system-system.cpp  system-system.h  system-view.cpp  system-view.h
airplane/x64/Debug/: airplane.exe.recipe  airplane.ilk  vc143.idb
airplane/x64/Debug/airplane.tlog/: CL.command.1.tlog  CL.read.1.tlog  (+7 more)
arch/behavior/: BulletBehavior.h  EnemyBehavior.h  PlaneBehavior.h  PlayerBehavior.h  PropBehavior.h
arch/core/: Enemy.h  Player.h  bullet.h  plane.h  prop.h
arch/manager/: BulletManager.h  EnemyManager.h  GameManager.h  PlayerManager.h  PropManager.h
arch/system/: engine.h  system.h  view.h
src/: engine.cpp  system.cpp
src/Behavior/: PlaneBehavior.cpp
src/manager/: BulletManager.cpp  EnemyManager.cpp  GameManager.cpp  PlayerManager.cpp  PropManager.cpp
src/system/: engine.cpp  system.cpp
